--- a/style.css
+++ b/style.css
@@ -1,205 +1,145 @@
-html {
-  box-sizing: border-box;
-  outline: none;
-}
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
-body {
-  font-family: 'Source Sans Pro', sans-serif;
-  line-height: 1.5;
-  background: #F2F2F2;
-  color: #323232;
-}
-
-img {
-  max-width: 100%;
-}
-
-.icon {
-  fill: currentColor;
-  display: inline-block;
-  font-size: inherit;
-  height: 1em;
-  overflow: visible;
-}
-
-a {
-  color: #323232;
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
+body{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Source Sans Pro', sans-serif;
+    line-height: 1.5;
+    background: #F2F2F2;
+    color: #323232;
 }
 
 .container {
-  max-width: 960px;
-  margin: 40px auto;
-  padding: 32px;
-  background: white;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-section {
-  display: grid;
-  grid-template-columns: 1fr 4fr;
-  grid-gap: 20px;
-  padding: 24px 0;
-  border-bottom: 1px solid lightgrey;
-}
-
-section:last-child {
-  border-bottom: none;
-}
-
-.section-title {
-  font-weight: bold;
-  font-size: 18px;
-}
-
-/***********************************
-* =Main Info
-***********************************/
-
-img.avatar {
-  width: 130px;
-}
-
-.my-name {
-  font-size: 48px;
-  line-height: 1;
-}
-
-.my-title {
-  font-size: 24px;
-  font-weight: 300;
-  color: #236FB2;
-}
-
-.links {
-  display: flex;
-  margin: 10px 0 20px 0;
-}
-
-.link-item {
-  display: flex;
-  align-items: center;
-  flex: 1;
-  margin-top: 20px;
-}
-#summary{
-  font-weight: bolder;
-  margin-bottom: 20px;
-}
-.link-item svg {
-  margin-right: 6px;
-}
-
-/***********************************
-* =Experience
-***********************************/
-
-.job {
-  padding-bottom: 24px;
-  margin-bottom: 24px;
-  border-bottom: 1px solid lightgrey;
-}
-
-.job:last-child {
-  border-bottom: none;
-}
-
-.job-title-container {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 20px;
-  font-size: 18px;
-}
-
-.job-company {
-  font-weight: bold;
-  line-height: 1.2;
-}
-
-/***********************************
-* =Skills
-***********************************/
-
-.skills-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 20px;
-  margin-bottom: 24px;
-}
-
-.skills-container ul {
-  margin-left: 20px;
-  list-style-type: disc;
-}
-
-/***********************************
-* =Interests
-***********************************/
-
-.interests-container {
-  display: flex;
-  justify-content: space-between;
-}
-
-.interests-container img {
-  height: 35px;
-  opacity: 0.75;
-}
-
-/***********************************
-* =References
-***********************************/
-
-.reference {
-  font-size: 18px;
-}
-
-.reference-details {
-  margin-bottom: 20px;
-}
-
-@media only screen and (max-width : 768px) {
-  section {
-    grid-template-columns: 1fr;
+    max-width: 960px;
+    margin: 40px auto;
+    padding: 32px;
+    background: white;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
 
-  .links, .job-title-container {
-    flex-direction: column;
-  }
-
-  .skills-container {
-    grid-template-columns: 1fr 1fr;
-  }
-
-  .interests-container {
-    flex-wrap: wrap;
-    justify-content: flex-start;
-  }
-
-  .interests-container img {
-    margin-right: 32px;
-    margin-bottom: 16px;
-  }
+img {
+    max-width: 100%;
 }
-@media only screen and (max-width : 414px) {
-  .links {
+
+.my-name{
+    text-align: center;
+    margin-top: 2rem;
+    transition: 0.5s;
+}
+.my-name:hover{
+    transform: scale(1.1);
+}
+.my-title{
+    text-align: center;
+    color: rgb(88, 88, 224);
+    transition: 0.5s;
+}
+.my-title:hover{
+    transform: scaleX(1.5);
+}
+
+.links{
     display: flex;
     margin: 10px 0 20px 0;
-  }
-  
-  .link-item {
+}
+
+a{
+    color: #323232;
+    text-decoration: none;
+}
+#summary{
+    margin-top: 2rem;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+.link-item {
     display: flex;
     align-items: center;
-    flex-direction: column;
     flex: 1;
     margin-top: 20px;
-  }
-
 }
+p{
+    border-bottom: 1px solid grey;
+    padding-bottom:1rem ;
+}
+
+@media only screen and (max-width : 450px) {
+    .links{
+        display: flex;
+        flex-direction:column ;
+    }
+    .img-wrapper{
+        padding-left: 3.5rem;
+    }
+}
+
+.job {
+    padding-bottom: 24px;
+    margin-bottom: 24px;
+    border-bottom: 1px solid lightgrey;
+}
+.exp{
+    transition: 0.5s;
+}
+.exp:hover{
+    transform: scaleY(1.5);
+}
+.job:last-child {
+    border-bottom: none;
+}
+  
+.job-title-container {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+  
+.experience{
+    display: flex;
+}
+
+.skill-set{
+    padding-left:5rem ;
+    margin-bottom: 1.5rem;
+}
+.img-wrapper{
+    transition: 0.5s;
+}
+.img-wrapper:hover{
+    transform: scale(1.3);
+}
+
+.interests-container {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid black;
+    padding-bottom: 1rem;
+}
+.interest{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+  
+.interests-container img {
+    height: 35px;
+    opacity: 0.75;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.project{
+    margin-top: 1rem;
+    display:flex ;
+    flex-direction: row;
+    text-align: left;
+}
+.project-content{
+    margin-top: 1rem;
+    border-bottom: 1px solid black;
+    margin-bottom: 1rem;
+    padding-bottom: 1rem;
+    align-items: center;
+    justify-content: center;
+}
+ 
